Restore and update previous unified submission