@@ -5,11 +5,14 @@ import com.github.dr.rwserver.util.log.Log;
 
 import java.io.*;
 import java.net.HttpURLConnection;
+import java.net.URI;
 import java.net.URL;
 import java.net.URLConnection;
-import java.util.zip.GZIPInputStream;
+import java.net.http.HttpClient;
+import java.net.http.HttpResponse;
+import java.time.Duration;
 
-import static com.github.dr.rwserver.util.ExtractUtil.stringToUtf8;
+import static com.github.dr.rwserver.util.IsUtil.isBlank;
 
 
 /**
@@ -18,152 +21,87 @@ import static com.github.dr.rwserver.util.ExtractUtil.stringToUtf8;
 public class HttpRequest {
 
 	private static final String USER_AGENT = "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/80.0.3987.132 Safari/537.36";
+	private static final HttpClient CLIENT = HttpClient.newBuilder()
+											.version(HttpClient.Version.HTTP_1_1)
+											.connectTimeout(Duration.ofSeconds(10))
+											.build();
 
 	public static String doGet(String url) {
-		return doGet(url,null);
-	}
-
-	public static String doGet(String url,String tok) {
-	HttpURLConnection con = null;
-	BufferedReader in = null;
-	StringBuffer result = new StringBuffer();
-	String line = null;
-	try {
-		URL conn = new URL(url);
-		con = (HttpURLConnection) conn.openConnection();
-		con.setConnectTimeout(3000);
-		con.setReadTimeout(3000);
-		con.setRequestMethod("GET");
-		con.addRequestProperty("Accept-Charset", "UTF-8");
-		con.setRequestProperty("User-Agent", USER_AGENT);
-		con.setRequestProperty("Accept-Encoding", "gzip,deflate");
-		if (tok != null) {
-			con.setRequestProperty("Tonken-ASD", tok);
+		java.net.http.HttpResponse<String> response = null;
+		java.net.http.HttpRequest request = java.net.http.HttpRequest.newBuilder()
+											.uri(URI.create(url))
+											.setHeader("User-Agent", USER_AGENT)
+											.build();
+		try {
+			response = CLIENT.send(request, HttpResponse.BodyHandlers.ofString());
+		} catch (Exception e) {
+			Log.error("HTTP GET Error",e);
 		}
-		String contentEncoding = con.getContentEncoding();
-		if (null != contentEncoding && contentEncoding.indexOf("gzip") != -1) {
-			GZIPInputStream gzipInputStream = new GZIPInputStream(con.getInputStream());
-			in = new BufferedReader(new InputStreamReader(gzipInputStream));
-			while ((line = in.readLine()) != null) {
-				result.append(stringToUtf8(line));
-			}
-		} else {
-			in = new BufferedReader(new InputStreamReader(con.getInputStream(),Data.UTF_8));
-			while ((line = in.readLine()) != null) {
-				result.append("\n"+stringToUtf8(line));
-			}
-		}
-	} catch (IOException e) {
-		Log.error("doGet!",e);
-	} finally{
-		if(in != null) {
-			try {
-				in.close();
-			} catch (IOException e) {
-				in = null;
-			}
-		}
-		if(con != null) {
-			con.disconnect();
-		}
-	}
-	return result.toString();
-	}
-
-	public static String doPost(String url, String param, String usAg) {
-		return doPost(url,param,null,usAg);
+		return (String) response.body();
 	}
 
 	public static String doPost(String url, String param) {
-		return doPost(url,param,null,USER_AGENT);
+		return doPost(url,param,USER_AGENT);
 	}
 
-	public static String doPost(String url, String param, String tok,String usAg) {
-		StringBuilder result = new StringBuilder();
-		PrintWriter out = null;
-		BufferedReader in = null;
-		String line = null;
-		try{
-			URL realUrl = new URL(url);
-			HttpURLConnection conn =  (HttpURLConnection)realUrl.openConnection();
-			conn.setRequestProperty("accept", "*/*");
-			conn.addRequestProperty("Accept-Charset", "UTF-8");
-			conn.setRequestProperty("Content-Type", "application/x-www-form-urlencoded;charset=utf-8");
-			conn.setRequestProperty("connection", "Keep-Alive");
-			conn.setRequestProperty("User-Agent",usAg);
-			conn.setRequestProperty("Accept-Encoding", "gzip,deflate");
-			if (tok != null) {
-				conn.setRequestProperty("Tonken-ASD", tok);
-			}
-			conn.setDoOutput(true);
-			conn.setDoInput(true);
-			InputStream inst = null;
-			out = new PrintWriter(conn.getOutputStream());
-			out.print(param);
-			out.flush();
-			String contentEncoding = conn.getContentEncoding();
-			if (null != contentEncoding && contentEncoding.indexOf("gzip") != -1) {
-				GZIPInputStream gzipInputStream = new GZIPInputStream(conn.getInputStream());
-				in = new BufferedReader(new InputStreamReader(gzipInputStream));
-	            while ((line = in.readLine()) != null) {
-                    result.append(stringToUtf8(line));
-                }
-			} else {
-				in = new BufferedReader(new InputStreamReader(conn.getInputStream(),Data.UTF_8));
-				while ((line = in.readLine()) != null) {
-                    result.append("\n"+stringToUtf8(line));
-                }
-			}
-			Log.info("POST",result.toString());
-		} catch (IOException e) {
-			Log.error("doPost!",e);
-		} finally{
-			if(out != null) {
-                out.close();
-            }
-			if(in != null) {
-                try{
-                    in.close();
-                } catch (IOException e) {
-                    in = null;
-                }
-            }
+	public static String doPost(String url, String param,String usAg) {
+		java.net.http.HttpResponse<String> response = null;
+		java.net.http.HttpRequest request = java.net.http.HttpRequest.newBuilder()
+				.uri(URI.create(url))
+				.setHeader("User-Agent", usAg)
+				.POST(java.net.http.HttpRequest.BodyPublishers.ofString(param))
+				.build();
+		try {
+			response = CLIENT.send(request, HttpResponse.BodyHandlers.ofString());
+		} catch (Exception e) {
+			Log.error("HTTP Post Error",e);
 		}
-		return result.toString();
+		return (String) response.body();
 	}
 
 	public static String doPostRw(String url, String param) {
-		StringBuilder result = new StringBuilder();
+		/*
+		java.net.http.HttpResponse<String> response = null;
+		java.net.http.HttpRequest request = java.net.http.HttpRequest.newBuilder()
+				.uri(URI.create(url))
+				.setHeader("User-Agent", "rw android 151 zh")
+				.setHeader("Language", "zh")
+				.POST(java.net.http.HttpRequest.BodyPublishers.ofString(param))
+				.build();
+		try {
+			response = CLIENT.send(request, HttpResponse.BodyHandlers.ofString());
+		} catch (Exception e) {
+			Log.error("HTTP Post Error",e);
+		}
+		Log.info("POST CODE",response.statusCode());
+		return (String) response.body();
+		 */
+		final StringBuilder result = new StringBuilder();
 		PrintWriter out = null;
 		BufferedReader in = null;
-		String line = null;
-		try{
+		try {
 			URL realUrl = new URL(url);
-			URLConnection conn =  realUrl.openConnection();
-			conn.setRequestProperty("User-Agent","rw android 136 zh");
+			URLConnection conn = realUrl.openConnection();
+			conn.setRequestProperty("User-Agent", "rw android 151 zh");
 			conn.setRequestProperty("Content-Type", "application/x-www-form-urlencoded");
-			conn.setRequestProperty("Connection", "Keep-Alive");
-			//conn.setRequestProperty("Host", "Keep-Alive");
-
+			conn.setRequestProperty("Language", "zh");
 			conn.setDoOutput(true);
 			conn.setDoInput(true);
-
 			out = new PrintWriter(conn.getOutputStream());
 			out.print(param);
 			out.flush();
-			in = new BufferedReader(new InputStreamReader(conn.getInputStream(),Data.UTF_8));
-			while ((line = in.readLine()) != null) {
-				result.append("\n"+stringToUtf8(line));
+			in = new BufferedReader(new InputStreamReader(conn.getInputStream(), Data.UTF_8));
+			while (in.readLine() != null) {
+				result.append(Data.LINE_SEPARATOR + Data.LINE_SEPARATOR);
 			}
-			//Log.info(result.toString());
 		} catch (IOException e) {
-			Log.error("doPost!",e);
-		} finally{
-			if(out != null) {
+			Log.error("doPost!", e);
+		} finally {
+			if (out != null) {
 				out.close();
 			}
-			if(in != null) {
-				try{
+			if (in != null) {
+				try {
 					in.close();
 				} catch (IOException e) {
 					in = null;
@@ -173,54 +111,42 @@ public class HttpRequest {
 		return result.toString();
 	}
 
-	public static void downUrl(String url,File file) {
-		FileOutputStream fileOut = null;
-		HttpURLConnection conn = null;
-		InputStream inputStream = null;
-		BufferedInputStream bis = null;
-		BufferedOutputStream bos = null;
+	public static boolean downUrl(final String url,final File file) {
 		try{
 			File filepath=file.getParentFile();
 			if(!filepath.exists()) {
 				filepath.mkdirs();
 			}
 			URL httpUrl=new URL(url);
-			conn=(HttpURLConnection) httpUrl.openConnection();
-			conn.setDoInput(true);
-			conn.setDoOutput(true);
-			conn.setUseCaches(false);
-			conn.connect();
-			inputStream=conn.getInputStream();
-			bis = new BufferedInputStream(inputStream);
-			fileOut = new FileOutputStream(file);
-			bos = new BufferedOutputStream(fileOut);
-			byte[] buf = new byte[4096];
-			int length = bis.read(buf);
-			while(length != -1){
-				bos.write(buf, 0, length);
-				length = bis.read(buf);
+			HttpURLConnection conn;
+			while (true) {
+				conn = (HttpURLConnection) httpUrl.openConnection();
+				conn.setRequestProperty("User-Agent",USER_AGENT);
+				if (conn.getResponseCode() == 301 || conn.getResponseCode() == 302) {
+					final String newUrl = conn.getHeaderField("Location");
+					if (isBlank(newUrl)) {
+						Log.error("Download Fail: Empty Redirect");
+						return false;
+					}
+					httpUrl = new URL(newUrl);
+				} else {
+					break;
+				}
 			}
-			Log.debug("URL-Down-End");
-		} catch (IOException e) {
+			try (BufferedInputStream bis = new BufferedInputStream(conn.getInputStream())) {
+				try (BufferedOutputStream bos = new BufferedOutputStream(new FileOutputStream(file))) {
+					byte[] buf = new byte[4096];
+					int length = bis.read(buf);
+					while (length != -1) {
+						bos.write(buf, 0, length);
+						length = bis.read(buf);
+					}
+				}
+			}
+			return true;
+		} catch (Exception e) {
 			Log.error("downUrl",e);
-		} finally{
-			if(conn != null) {
-				conn.disconnect();
-			}
-			if(bos != null) {
-				try {
-					bos.close();
-				} catch (Exception e) {
-					bos = null;
-				}
-			}
-			if(bis != null) {
-				try {
-					bis.close();
-				} catch (Exception e) {
-					bis = null;
-				}
-			}
 		}
+		return false;
 	}
 }
